<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity"
    android:background="@drawable/dark_fall">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/end_scoreboard"
        android:layout_width="241dp"
        android:layout_height="246dp"
        android:layout_marginTop="117dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/scoreboard" />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_score"
        style="@style/textNoSize"
        android:text="@string/score_label"
        android:textSize="32sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp"
        android:layout_width="241dp"
        android:layout_height="40dp"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toTopOf="@+id/end_scoreboard"
        app:layout_constraintStart_toStartOf="@+id/end_scoreboard"
        app:layout_constraintEnd_toEndOf="@+id/end_scoreboard"
        />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/player_score"
        style="@style/textHeader"
        android:layout_marginTop="5dp"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lbl_score"
        app:layout_constraintStart_toStartOf="@+id/end_scoreboard"
        app:layout_constraintEnd_toEndOf="@id/end_scoreboard"
        android:text="00:00.00"
        android:textSize="54sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/end_titlecard"
        android:layout_width="333dp"
        android:layout_height="113dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/home_titlecard" />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_game_over"
        style="@style/textHeader"
        android:layout_marginTop="15dp"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/end_titlecard"
        app:layout_constraintStart_toStartOf="@+id/end_titlecard"
        app:layout_constraintEnd_toEndOf="@id/end_titlecard"
        android:text="@string/game_over"
        android:textSize="58sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp" />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_end_subtitle"
        style="@style/textSubheading"
        android:layout_width="333dp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_game_over"
        app:layout_constraintStart_toStartOf="@id/end_titlecard"
        app:layout_constraintEnd_toEndOf="@id/end_titlecard"
        android:text="@string/game_over_subtitle"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/dino_dead"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/nico_dead"
        app:layout_constraintTop_toBottomOf="@+id/end_scoreboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_play_again"
        style="@style/btnStyle"
        app:layout_constraintTop_toBottomOf="@+id/end_scoreboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="140dp" />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_play_again"
        style="@style/textNoSize"
        android:text="@string/play_again"
        android:textSize="40sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp"
        android:layout_width="220dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@+id/btn_play_again"
        app:layout_constraintStart_toStartOf="@+id/btn_play_again"
        app:layout_constraintEnd_toEndOf="@+id/btn_play_again"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_share"
        style="@style/btnStyle"
        app:layout_constraintTop_toBottomOf="@+id/btn_play_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_share"
        style="@style/textNoSize"
        android:text="@string/share"
        android:textSize="40sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp"
        android:layout_width="220dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@+id/btn_share"
        app:layout_constraintStart_toStartOf="@+id/btn_share"
        app:layout_constraintEnd_toEndOf="@+id/btn_share"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_leaderboard"
        style="@style/btnStyle"
        app:layout_constraintTop_toBottomOf="@+id/btn_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_leaderboard"
        style="@style/textNoSize"
        android:text="@string/leaderboard"
        android:textSize="40sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp"
        android:layout_width="220dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@+id/btn_leaderboard"
        app:layout_constraintStart_toStartOf="@+id/btn_leaderboard"
        app:layout_constraintEnd_toEndOf="@+id/btn_leaderboard"
        />

</androidx.constraintlayout.widget.ConstraintLayout>