<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentGamePause"
    android:background="#80000000">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pause_board"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:src="@drawable/board_long"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pause_plate"
        style="@style/btnStyle2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/pause_title"
        style="@style/textSubheading"
        android:textSize="32sp"
        android:text="@string/pause"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp"
        app:layout_constraintTop_toTopOf="@id/pause_plate"
        app:layout_constraintStart_toStartOf="@id/pause_plate"
        app:layout_constraintEnd_toEndOf="@id/pause_plate"
        android:layout_marginTop="2dp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_resume"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_rectshort"
        app:layout_constraintEnd_toEndOf="@+id/pause_board"
        app:layout_constraintStart_toStartOf="@+id/pause_board"
        app:layout_constraintTop_toTopOf="@+id/pause_board" />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_resume"
        style="@style/textNoSize"
        android:text="@string/resume"
        android:textSize="35sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/btn_resume"
        app:layout_constraintStart_toStartOf="@+id/btn_resume"
        app:layout_constraintEnd_toEndOf="@+id/btn_resume"
        app:layout_constraintBottom_toBottomOf="@+id/btn_resume"
        android:layout_marginBottom="5dp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_game_settings"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_rectshort"
        app:layout_constraintEnd_toEndOf="@+id/pause_board"
        app:layout_constraintStart_toStartOf="@+id/pause_board"
        app:layout_constraintTop_toBottomOf="@+id/btn_resume" />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_game_resume"
        style="@style/textNoSize"
        android:text="@string/settings"
        android:textSize="35sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/btn_game_settings"
        app:layout_constraintStart_toStartOf="@+id/btn_game_settings"
        app:layout_constraintEnd_toEndOf="@+id/btn_game_settings"
        app:layout_constraintBottom_toBottomOf="@+id/btn_game_settings"
        android:layout_marginBottom="5dp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_retry"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_rectshort"
        app:layout_constraintEnd_toEndOf="@+id/pause_board"
        app:layout_constraintStart_toStartOf="@+id/pause_board"
        app:layout_constraintTop_toBottomOf="@+id/btn_game_settings" />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_retry"
        style="@style/textNoSize"
        android:text="@string/retry"
        android:textSize="35sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/btn_retry"
        app:layout_constraintStart_toStartOf="@+id/btn_retry"
        app:layout_constraintEnd_toEndOf="@+id/btn_retry"
        app:layout_constraintBottom_toBottomOf="@+id/btn_retry"
        android:layout_marginBottom="5dp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_quit"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_rectshort"
        app:layout_constraintEnd_toEndOf="@+id/pause_board"
        app:layout_constraintStart_toStartOf="@+id/pause_board"
        app:layout_constraintTop_toBottomOf="@+id/btn_retry" />

    <ph.edu.dlsu.mobdeve.ang.silvestre.dienosaur.TextOutline
        android:id="@+id/lbl_quit"
        style="@style/textNoSize"
        android:text="@string/quit"
        android:textSize="35sp"
        app:outlineColor="@color/outline"
        app:outlineSize="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/btn_quit"
        app:layout_constraintStart_toStartOf="@+id/btn_quit"
        app:layout_constraintEnd_toEndOf="@+id/btn_quit"
        app:layout_constraintBottom_toBottomOf="@+id/btn_quit"
        android:layout_marginBottom="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>